# modswapper

./: Cargo.toml
src/: fuzzy.rs  main.rs  model.rs  rfd_service.rs  ui.rs
src/ui/: filterlogic.rs  rfd_worker.rs  viewmodel.rs  viewmodel_demo.rs  widgets.rs  windows.rs
src/ui/widgets/: filter_bar.rs  multi_file_list.rs  profile.rs  swap_set.rs
src/ui/windows/: new_swap_set.rs
