[package]
name = "modswapper"
version = "0.1.0"
edition = "2021"

[features]
devdemo = ["Inflector", "names", "rand"]
backend = []

[dependencies]
Inflector = { version = "0.11.4", optional = true }
anyhow = "1.0.75"
camino = "1.1.6"
crossbeam = "0.8.3"
directories = { version = "5.0.1"}
eframe = { git = "https://github.com/emilk/egui.git", rev = "e36b9811180476fadd5b67c3e311ac9ce5a82302" }
either = "1.9.0"
fuzzy-matcher = { version = "0.3.7", optional = true }
itoa = "1.0.10"
junction = "1.0.0"
names = { version = "0.14.0", optional = true }
once_cell = "1.19.0"
rand = { version = "0.8.5", optional = true }
rfd = { version = "0.12.1", default-features = false, features = ["xdg-portal"] }
thiserror = "1.0.51"
uuid = { version = "1.6.1", features = ["v4"] }
