[package]
name = "modswapper"
version = "0.1.0"
edition = "2021"

[features]
devdemo = ["Inflector", "names", "rand"]
backend = []

[dependencies]
Inflector = { version = "0.11", optional = true }
anyhow = "1"
camino = "1"
crossbeam = "0.8"
directories = "5"
eframe = "0.25"
either = "1"
futures = { version = "0.3.30", features = ["futures-executor"] }
fuzzy-matcher = { version = "0.3", optional = true }
itoa = "1"
junction = "1.0.0"
names = { version = "0.14", optional = true }
once_cell = "1"
rand = { version = "0.8", optional = true }
rfd = { version = "0.12", default-features = false, features = ["xdg-portal"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
velect = { git = "https://github.com/CerulanLumina/velect.git" }
